# VoiceAgent_Gobernance

./: .gitignore  CONFIGURACION.md  README.md  docker-compose.yml  stack.env.example  tfm_gobernanza_agentes_de_voz.pptx
backend/: .env.example  Dockerfile  pyproject.toml  railway.json  railway.worker.json
backend/alembic/: env.py
backend/alembic/versions/: 191402a211d6_add_app_credentials.py  2e1172910ad3_create_raw_events.py  362fddd0d613_add_agents_sessions_events.py  89465196cf36_add_evidences.py  8e3c03e687de_add_evaluation_reports.py  a3f7c9d1e5b2_add_agents_webhook_activated.py  c6f1e8a2b4d7_add_event_session_sequence_uniqueness.py  d851eabb9809_add_session_marker_uniqueness.py  dfeb7c2c1f0e_add_agents_deleted_at.py
backend/scripts/: check_openrouter_judge.py
backend/src/: main.py
backend/src/adapters/llm/: openrouter_judge.py
backend/src/adapters/rest/: agent_routes.py  agent_schemas.py  auth.py  query_routes.py  query_schemas.py  routes.py  schemas.py  vapi.py  vapi_mapping.py  ws.py
backend/src/adapters/vapi/: assistant_directory.py
backend/src/application/: commands.py  errors.py
backend/src/application/ports/: active_sessions.py  assistant_directory.py  conversation_judge.py  evaluation.py  governance_repository.py  query.py
backend/src/application/use_cases/: activate_agent.py  detect_conversation_silence.py  ingest_event.py  record_conversation_content.py  record_system_observation.py  (+4 more)
backend/src/domain/: agent.py  enums.py  evaluation_report.py  event.py  evidence.py  evidence_builder.py  exceptions.py  password_policy.py  secrets.py  session.py
backend/src/infrastructure/: config.py  logging_config.py
backend/tests/: conftest.py  fakes.py  test_activate_agent_use_case.py  test_active_session_store.py  test_active_sessions_ws.py  test_active_state_wiring.py  test_agent_activation_endpoints.py  test_agent_endpoints.py  test_agent_model.py  test_agent_repository_upsert.py  test_agent_webhook_activation_repository.py  test_assistant_directory.py  test_auth.py  test_build_evidences_task.py  test_celery_app.py  test_config.py  test_conversation_content_mapping.py  test_conversation_silence_detection.py  test_credentials_repository.py  test_deterministic_evaluator.py  test_domain_agent.py  test_domain_enums.py  test_domain_event.py  test_domain_evidence.py  test_domain_session.py  test_evaluate_session_task.py  test_evaluation_port.py  test_evaluation_report.py  test_evaluation_report_model.py  test_evaluation_report_repository.py  test_event_schema.py  test_events_endpoint.py  test_events_integration.py  test_evidence_builder.py  test_governance_query.py  test_governance_repository.py  test_health.py  test_ingest_event_use_case.py  test_ingest_logging.py  test_m7_validation_artifacts.py  (+27 more)
(+153 files in other folders)
