[project]
name = "governance-platform"
version = "0.1.0"
description = "Governance platform for voice conversational agents"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.115",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "jsonschema>=4.26.0",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--ignore=.env"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

# Celery ships no type stubs; relax only where its untyped decorators are used.
[[tool.mypy.overrides]]
module = ["celery.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["src.infrastructure.celery.*"]
disallow_untyped_decorators = false
